--- a/public/css/preload.css
+++ b/public/css/preload.css
@@ -1,90 +1,170 @@
-.container {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 19.20rem;
-  height: 10.80rem;
-  transform: translate(-50%, -50%);
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-}
-.page-loading {
-  width: 100%;
-  height: 100%;
-  background-color: #75ddee;
-  background-size: cover;
-  text-align: center;
+.gameLoadingContainer {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 19.20rem;
+    height: 10.80rem;
+    transform: translate(-50%, -50%);
+    /* background-size: cover;
+    background-position: center center; */
+    /* background-repeat: no-repeat; */
+    background: black;
+    overflow: hidden;
+    background: url(../img/FirstHomeBg.jpg) no-repeat;
+    background-size: 100% 100%;
 }
 
-.loader-container {
-  height: .4rem;
-  width: 6.8rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -1rem;
-  margin-left: -3.4rem;
-  background-color: #999999;
-  border-radius: .5rem;
-  border: .05rem solid #ffffff;
-  overflow: hidden;
-  transform: rotate(0deg);
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform-style: preserve-3d;
-  -webkit-transform-styl: preserve-3d;
-  -moz-transform-styl: preserve-3d;
-  -o-transform-styl: preserve-3d;
+.gameLoadingContainer img {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
 }
 
-.runner {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border-radius: .5rem .5rem .5rem .5rem;
-  left: .1rem;
-  background: linear-gradient(left, #ffcf93, #f98d9d, #a392fb);
-  background: -webkit-linear-gradient(left, #ffcf93, #f98d9d, #a392fb);
-  background: -moz-linear-gradient(left, #ffcf93, #f98d9d, #a392fb);
-  background: -o-linear-gradient(left, #ffcf93, #f98d9d, #a392fb);
-  background: -ms-linear-gradient(left, #ffcf93, #f98d9d, #a392fb);
-  animation: loader 3s infinite linear;
-  -webkit-animation: loader 3s infinite linear;
-  -o-animation: loader 3s infinite linear;
-  -moz-animation: loader 3s infinite linear;
+.gameLoadingContainer .bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
-.loadingText {
-  display: block;
-  position: absolute;
-  left: 42%;
-  top: 52%;
-  color: #849bfe;
-  font-size: .7rem;
-  font-weight: 900;
-  font-family: Comic Sans MS;
-  text-shadow: #ffffff .03rem 0 0, #ffffff 0 .03rem 0, #ffffff -.03rem 0 0, #ffffff 0 -.03rem 0;
-  -webkit-text-shadow: #ffffff .03rem 0 0, #ffffff 0 .03rem 0, #ffffff -.03rem 0 0, #ffffff 0 -.03rem 0;
-  -moz-text-shadow: #ffffff .03rem 0 0, #ffffff 0 .03rem 0, #ffffff -.03rem 0 0, #ffffff 0 -.03rem 0;
+#netbadbackground {
+    position: absolute;
+    z-index: 99;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgba(0, 0, 0, 0.8); */
+    /* visibility: hidden; */
 }
 
-@keyframes loader {
-  0% {
-    -webkit-transform: translate(-6.8rem);
-  }
-  50% {
-    -webkit-transform: translate(0);
-  }
-  100% {
-    -webkit-transform: translate(6.8rem);
-  }
+#netbadpopupband {
+    position: absolute;
+    z-index: 999;
+    width: 9.68rem;
+    height: 6.50rem;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 3rem;
 }
-body, html {
-  margin: 0px;
-  height: 100%;
+
+
+/* 文字修改开始 */
+
+#netbadpopupband .text {
+    position: absolute;
+    width: 6.8rem;
+    height: auto;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 3.1rem;
+    color: #796C32;
+    font-size: 0.35rem;
+    text-align: justify;
+    word-break: break-all;
 }
-body{
-  background-color: black;
+
+#LoadingText {
+    position: absolute;
+    left: 35%;
+    top: 1rem;
+    font-size: .8rem;
+    font-weight: 600;
+    color: #796C32;
+}
+
+#LoadingTextContent {
+    visibility: hidden;
+}
+
+
+/* 文字修改结束 */
+
+
+/* 进度条开始 */
+
+#loadingPosition {
+    position: relative;
+    top: -5rem;
+    left: 1.5rem;
+    width: 2rem;
+    height: 2rem;
+    /* border: 1px red solid; */
+}
+
+#loadingPosition .ProBorde {
+    position: absolute;
+    left: 15%;
+    top: 34.5%;
+    width: 6rem;
+    height: 0.6rem;
+}
+
+#loadingPosition .ProRig {
+    position: absolute;
+    left: 19%;
+    top: 38.5%;
+    width: 0.3rem;
+    height: 0.45rem;
+}
+
+#ProMid {
+    position: absolute;
+    left: 33.8%;
+    top: 38.5%;
+    width: 0.3rem;
+    height: 0.45rem;
+}
+
+#ProLef {
+    position: absolute;
+    left: 48.8%;
+    top: 38.5%;
+    width: 0.3rem;
+    height: 0.45rem;
+}
+
+
+/* 进度条结束 */
+
+
+/* 按钮事件开始 */
+
+#netbadpopupband #gobackbutton {
+    position: absolute;
+    z-index: 10;
+    width: 2.95rem;
+    height: 1.1rem;
+    margin: 0 auto;
+    right: 0;
+    left: 0;
+    top: 4rem;
+    cursor: pointer;
+    visibility: hidden;
+}
+
+#netbadpopupband #gobackbuttonblack {
+    position: absolute;
+    z-index: 1;
+    width: 2.95rem;
+    height: 1.1rem;
+    margin: 0 auto;
+    right: 0;
+    left: 0;
+    top: 4rem;
+    opacity: 0;
+    cursor: pointer;
+}
+
+
+/* 按钮事件结束 */
+
+body,
+html {
+    margin: 0px;
+    padding: 0px;
+    height: 100%;
+    background-color: black;
 }
