--- a/public/css/preload.css
+++ b/public/css/preload.css
@@ -10,7 +10,7 @@
     /* background-repeat: no-repeat; */
     background: black;
     overflow: hidden;
-    background: url(../img/FirstHomeBg.jpg) no-repeat;
+    /* background: url(../img/FirstHomeBg.jpg) no-repeat; */
     background-size: 100% 100%;
 }
 
@@ -31,11 +31,20 @@
 
 #netbadbackground {
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 99;
     width: 100%;
     height: 100%;
-    /* background-color: rgba(0, 0, 0, 0.8); */
-    /* visibility: hidden; */
+    /*background-color: rgba(0, 0, 0, 0.8);
+    */
+    /*visibility: hidden;
+    */
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
 }
 
 #netbadpopupband {
@@ -87,43 +96,54 @@
 
 #loadingPosition {
     position: relative;
-    top: -5rem;
+    /* top: -5rem;
     left: 1.5rem;
     width: 2rem;
-    height: 2rem;
-    /* border: 1px red solid; */
+    height: 2rem; */
+    top: 10rem;
+    border: 1px red solid;
 }
 
 #loadingPosition .ProBorde {
     position: absolute;
-    left: 15%;
+    left: 32%;
     top: 34.5%;
-    width: 6rem;
-    height: 0.6rem;
+    width: 6.18rem;
+    height: 0.42rem;
 }
 
 #loadingPosition .ProRig {
     position: absolute;
-    left: 19%;
-    top: 38.5%;
-    width: 0.3rem;
-    height: 0.45rem;
+    left: 32%;
+    top: 38.38%;
+    width: 0.74rem;
+    height: 0.38rem;
 }
 
 #ProMid {
     position: absolute;
-    left: 33.8%;
-    top: 38.5%;
-    width: 0.3rem;
-    height: 0.45rem;
+    left: 34%;
+    top: 38.38%;
+    width: 1rem;
+    height: 0.38rem;
 }
 
 #ProLef {
     position: absolute;
-    left: 48.8%;
-    top: 38.5%;
-    width: 0.3rem;
-    height: 0.45rem;
+    left: 37%;
+    top: 38.38%;
+    width: 0.73rem;
+    height: 0.38rem;
+    /* width: 0.3rem;
+    height: 0.45rem; */
+}
+
+#ProLef0 {
+    position: absolute;
+    top: 3rem;
+    left: 7rem;
+    width: 5.16rem;
+    height: 6.34rem;
 }
 
 
